<resources>
    <string name="app_name">WasteManagementSystem</string>
    <string name="logInText">Log in</string>
    <string name="passwordText">Password</string>
    <string name="emailText">E-mail</string>
    <string name="welcome_text">Welcome!</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_not_match_password">Password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">Dashboard</string>
    <string name="navigation_drawer_open">Open dashboard drawer</string>
    <string name="navigation_drawer_close">Close dashboard drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Dashboard header</string>
    <string name="action_settings">Settings</string>
    <string name="scan_barcode_menu">Scan Barcode</string>
    <string name="menu_history">History</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_ranks">Awards</string>
    <string name="menu_bins">Recycle Bins</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="essentials">Essentials</string>
    <string name="arkono">Arkono</string>
    <string name="bigben">Big Ben</string>
    <string name="zoomlion">Zoomlion</string>

    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
</resources>
