<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_scan_barcode"
            android:icon="@drawable/icons_100"
            android:title="@string/scan_barcode_menu" />
        <item
            android:id="@+id/nav_awards"
            android:icon="@drawable/trophy"
            android:title="@string/menu_ranks" />
        <item
            android:id="@+id/nav_bins"
            android:icon="@drawable/trash_filled"
            android:title="@string/menu_bins" />
        <item
            android:id="@+id/nav_arkono"
            android:icon="@drawable/food_filled"
            android:title="@string/arkono" />
        <item
            android:id="@+id/nav_bigBen"
            android:icon="@drawable/seafood"
            android:title="@string/bigben" />
        <item
            android:id="@+id/nav_essentials"
            android:icon="@drawable/shop"
            android:title="@string/essentials" />
        <item
            android:id="@+id/nav_zoomlion"
            android:icon="@drawable/recycle_zoomlion"
            android:title="@string/zoomlion" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/recycle_zoomlion"
            android:title="@string/notification" />

    </group>
</menu>
